--- a/DockerFile
+++ b/DockerFile
@@ -2,3 +2,7 @@ FROM golang:latest
 
 RUN mkdir /app
 WORKDIR /app
+
+RUN go get github.com/gin-gonic/gin
+RUN go get github.com/go-sql-driver/mysql
+RUN go get github.com/jinzhu/gorm
