--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       dockerfile: DockerFile
-    command: /bin/sh -c "go run main.go"
+    command: /bin/sh -c "air"
     stdin_open: true
     tty: true
     volumes:
